syntax = "proto3";

service Users {
  rpc getUserRoles (UserFilter) returns (UserRolesResult);
}

enum UserRole {
  Owner = 0;
  Admin = 1;
  Editor = 2;
  Publisher = 3;
}

message UserFilter {
  string id = 1;
}

message UserRolesResult {
  repeated UserRole roles = 1;
}
